Code review Instantiator.java: replace encoding String with standard CharSet instance.